Fix active constraint green color bleeding into selector

--- a/less/site.less
+++ b/less/site.less
@@ -256,6 +256,7 @@
         .constraint-input {
             flex-grow: 1;
             padding: 0 0.3em;
+            color: initial;
         }
 
         .toolbar {
